Added clarification on used Lego sets.

--- a/website/index.jade
+++ b/website/index.jade
@@ -24,8 +24,8 @@ html
 				p
 					| To honor Alan Turing, we built a simple LEGO Turing Machine, to show everyone how simple
 					| a computer actually is.
-					| Primary goals were to make every operation as visible as possible and to make it using just
-					| a single LEGO MINDSTORMS NXT set.
+					| Primary goals were to make every operation as visible as possible and to make it using the automatic components of just
+					| a single LEGO MINDSTORMS NXT set, to make it easy to reproduce for those interested.
 					| The LEGO Turing Machine is part of the exhibition
 					&nbsp;
 					a(href="http://www.cwi.nl/news/2012/exhibition-turings-erfenis-at-centrum-wiskunde-informatica-opens-it-doors", target="_blank") Turing's Erfenis
@@ -100,7 +100,14 @@ html
 				p
 					| Alan Turing's original model has an infinite tape,
 					| but LEGO had a slight problem supplying infinite bricks.
-					| So we chose to fix our tape size to 32 positions.
+					| So we chose to fix our tape size to 32 positions. Our LEGO Turing machine
+					| only uses automatic components that are part of a single LEGO Mindstorms
+					| NXT set: one NXT brick, three electric motors and one color sensor. The final
+					| model contains parts of the NXT 2.0 set as well as a bunch of parts (mostly
+					| large beams, but also a cork screw and a set of gear racks) from two other
+					| LEGO Technic sets. We believe a slightly smaller version can be constructed
+					| using only one Mindstorms NXT 2.0 set (8547-1) and the medium-sized Technic
+					| set Mobile Crane (8053-1), which are both currently available.
 
 				h3 Instructions
 				p
