Added contact address info.

--- a/website/index.jade
+++ b/website/index.jade
@@ -30,7 +30,7 @@ html
 					&nbsp;
 					a(href="http://www.cwi.nl/news/2012/exhibition-turings-erfenis-at-centrum-wiskunde-informatica-opens-it-doors", target="_blank") Turing's Erfenis
 					&nbsp;
-					| at CWI.
+					| at CWI. Contact the builders at <a href="mailto:info@legoturingmachine.org">info@legoturingmachine.org</a>.
 				.addthis_toolbox.addthis_default_style
 					<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
 					<a class="addthis_button_tweet"></a>
